--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -534,14 +534,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      " \n"
      ]
     }
    ],
    "source": [
     "a = 2**256\n",
     "str(a)\n",
-    "print(str(a)[-1:])"
+    "print(a[-1:])"
    ]
   },
   {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {
     "tags": []
    },
@@ -591,16 +591,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n",
-      "False\n"
+      "0.2 + 0.4 est supérieure à 0.6\n"
      ]
     }
    ],
    "source": [
-    "print(0.2 + 0.4 > 0.6)\n",
-    "print(0.2 + 0.4 < 0.6)\n",
-    "print(0.2 + 0.4 == 0.6)"
+    "if 0.2 + 0.4 > 0.6:\n",
+    "  print(\"0.2 + 0.4 est supérieure à 0.6\")\n",
+    "elif 0.2 + 0.4 < 0.6:\n",
+    "  print(\"0.2 + 0.4 est inférieure à 0.6\")\n",
+    "elif 0.2 + 0.4 == 0.6:\n",
+    "  print(\"0.2 + 0.4 est égale à 0.6\")"
    ]
   },
   {
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {
     "tags": []
    },
@@ -621,15 +622,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.0\n"
+      "0.09999999962747097\n"
      ]
     }
    ],
    "source": [
-    "x = 8\n",
+    "x = 0.1\n",
     "x = x * (2**30)\n",
-    "int(x)\n",
-    "print(x/(2**30))"
+    "print(int(x)/(2**30))"
    ]
   },
   {
@@ -664,14 +664,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hello  world   world  hello \n"
+     ]
+    }
+   ],
    "source": [
-    "a = \"hello\"\n",
-    "b = 'world'"
+    "a = \" hello \"\n",
+    "b = ' world '\n",
+    "print(a + b, b + a)"
    ]
   },
   {
@@ -692,12 +701,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hello  hello  hello \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a * 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hello  world  hello  world \n"
+     ]
+    }
+   ],
+   "source": [
+    "print((a + b) * 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -708,10 +744,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' HELLO '"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.upper()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -724,10 +773,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hello \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -738,18 +797,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a > b)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Quelle est la signification de cette comparaison?"
+    "7. Quelle est la signification de cette comparaison?\n",
+    "\n",
+    "Cette comparaison signifie que a est inférieure à b."
    ]
   },
   {
