--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -763,14 +763,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n"
+      "6\n"
      ]
     }
    ],
    "source": [
     "a = 2**256\n",
-    "str(a)\n",
-    "print(a[-1:])"
+    "print(str(a)[-1:])"
    ]
   },
   {
@@ -782,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -893,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -973,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +981,7 @@
        "' HELLO '"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -1068,13 +1067,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " hello  hello \n"
+     ]
+    }
+   ],
    "source": [
-    "a = \"32\""
+    "a = a * 2\n",
+    "print(a)"
    ]
   },
   {
@@ -1086,12 +1094,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"32\"\n",
+    "b = int(a)\n",
+    "b = b * 2 \n",
+    "print(int(b))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1102,12 +1121,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=input(\"Tape quelque chose au clavier\")\n",
+    "print(s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1118,12 +1148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = int(input(\"Tape quelque chose au clavier\"))\n",
+    "s = s * 2\n",
+    "print(s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1134,12 +1176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"Quel est ton âge ?\"))\n",
+    "age = age + (2031 - 2022)\n",
+    "print(age)"
+   ]
   },
   {
    "cell_type": "markdown",
