--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -1230,6 +1230,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"import\" et \"2f\" ne sont pas des noms corrects. \"toto2-le-retour\" n'est pas un nom recommandé."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1238,12 +1247,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "a = int(input(\"Choisir un nombre\"))\n",
+    "a = sqrt(a)\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1258,10 +1280,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"a\"\n",
+    "a = a * 250\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb a\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = \"b\"\n",
+    "b = b * 250\n",
+    "a = \"a\"\n",
+    "print(b, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"a\"\n",
+    "a = a * 250\n",
+    "b = \"b\" \n",
+    "b = b * 250\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n",
+      "bonjour\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"bonjour\"\n",
+    "for i in range(50):\n",
+    "   print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
