--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -42,14 +42,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factors!\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 15\n",
+    "num2 = 5\n",
+    "if num1 % num2 == 0:\n",
+    "    print(\"Factors!\")\n",
+    "elif num2 % num1 == 0:\n",
+    "    print(\"Factors\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factors!\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 15\n",
+    "num2 = 5\n",
+    "if num1 % num2 == 0:\n",
+    "    print(\"Factors!\")\n",
+    "elif num2 % num1 == 0:\n",
+    "    print(\"Factors\")\n",
+    "else:\n",
+    "    print(\"Not factors!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,14 +110,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "School is cancelled!\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = \"Georgia\"\n",
+    "if state == \"New Jersey\":\n",
+    "    print(\"School isn't cancelled.\")\n",
+    "elif state == \"North Carolina\":\n",
+    "    print(\"School is postponed.\")\n",
+    "elif state == \"Georgia\":\n",
+    "    print(\"School is cancelled!\")\n",
+    "else: \n",
+    "    print(\"School's status is unknown.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,14 +166,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tiger\n"
+     ]
+    }
+   ],
+   "source": [
+    "annee = int(input(\"Choisir une année\"))\n",
+    "if annee % 12 == 0: \n",
+    "    print(\"monkey\")\n",
+    "elif annee % 12 == 1:\n",
+    "    print(\"rooster\")\n",
+    "elif annee % 12 == 2:\n",
+    "    print(\"dog\")\n",
+    "elif annee % 12 == 3:\n",
+    "    print(\"pig\")\n",
+    "elif annee % 12 == 4:\n",
+    "    print(\"rat\")\n",
+    "elif annee % 12 == 5:\n",
+    "    print(\"ox\")\n",
+    "elif annee % 12 == 6:\n",
+    "    print(\"tiger\")\n",
+    "elif annee % 12 == 7:\n",
+    "    print(\"rabbit\")\n",
+    "elif annee % 12 == 8:\n",
+    "    print(\"dragon\")\n",
+    "elif annee % 12 == 9:\n",
+    "    print(\"snake\")\n",
+    "elif annee % 12 == 10:\n",
+    "    print(\"horse\")\n",
+    "elif annee % 12 == 11:\n",
+    "    print(\"sheep\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,14 +224,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Freezing\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = -3.7\n",
+    "celsius = True \n",
+    "if (celsius == True and temperature <= 0) or (celsius == False and temperature <= 32):\n",
+    "    print(\"Freezing\")\n",
+    "else:\n",
+    "    print(\"Not freezing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Freezing\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = -3.7\n",
+    "celsius = True \n",
+    "if celsius == True and temperature <= 0:\n",
+    "    print(\"Freezing\")\n",
+    "elif celsius == False and temperature <= 32:\n",
+    "    print(\"Freezing\")\n",
+    "else:\n",
+    "    print(\"Not freezing\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,16 +288,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L'année est bissextile\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Choisir une année\"))\n",
+    "if a % 4 == 0 or (a % 100 != 0 and a % 400 == 0):\n",
+    "    print(\"L'année est bissextile\")\n",
+    "else:\n",
+    "    print(\"L'année n'est pas bissextile\")\n",
+    "   "
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
     "\n",
@@ -176,43 +324,138 @@
     "\n",
     "1. Ecrire un programme qui permet d'afficher tous les nombres entre 1 et 10 (bornes incluses).\n",
     "2. Ecrire un programme se limitant à la boucle *for* qui permet d'afficher tous les nombres pairs entre 1 et 20 (bornes incluses). Proposer une deuxième solution en incluant une structure conditionnelle."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "for i in range(10):\n",
+    "    a = a + 1\n",
+    "    print(a)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0 \n",
+    "for i in range(10):\n",
+    "    a = a + 2\n",
+    "    print(a)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0 \n",
+    "for i in range(20):\n",
+    "    a = a + 1\n",
+    "    if a % 2 == 0:\n",
+    "        print(a)\n",
+    "   \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 7:**\n",
     "    \n",
     "1. Ecrire un programme qui demande à l'utilisateur de saisir *n* nombres, *n* étant choisi par l'utilisateur, puis d'afficher la moyenne de ces nombres.\n",
     "\n",
     "2. Même question, mais l'utilisateur ne choisit pas à l'avance le nombre *n*, la procédure s'arrête quand il saisit le nombre -1.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [53], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez un nombre :\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      2\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[43mn\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m):\n\u001b[0;32m      4\u001b[0m     result \u001b[38;5;241m=\u001b[39m result \u001b[38;5;241m+\u001b[39m i\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLa moyenne est :\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28msum\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(result))\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
    ],
+   "source": [
+    "n = int(input(\"Entrez un nombre :\"))\n",
+    "result = 0\n",
+    "for i in range(1, n + 1):\n",
+    "    result = result + i\n",
+    "print(\"La moyenne est :\", sum/ len(result))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
     "**Exercice 8:**\n",
     "\n",
@@ -221,9 +464,7 @@
     "\n",
     "1. Une première version en utilisant la boucle *for*\n",
     "2. Une seconde version en utilisant la boucle *while*"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -308,13 +549,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 11:**\n",
     "    \n",
     "Ecrire un programme qui permet de calculer la somme des chiffres d'un entier *n* donné. Le nombre *n* doit être compris entre 10 et 20 (bornes incluses)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -324,14 +565,14 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 12:**\n",
     "\n",
     "1. Ecrire un programme qui permet de générer aléatoirement deux nombres entre 0 et 9, de calculer leurs différences (en valeur absolue), puis d'inviter l'utilisateur à répondre à la question suivante *que vaut abs(number1 - number2)?*. Le programme doit permettre à l'utilisateur de répondre plusieurs fois jusqu'à la saisie de la bonne réponse.\n",
     "2. Modifier le programme précédent de telle sorte qu'il génère cinq occurences à la suite invitant à répondre à la question précédente. A la fin, le programme affiche le nombre moyen de tentatives qu'il a fallu à l'utilisateur pour répondre à une question."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -354,13 +595,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 13:**\n",
     "\n",
     "Ecrire un programme qui permet de calculer le nombre de mots dans une phrase saisie par l'utilisateur."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -488,6 +729,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 17:**\n",
     "\n",
@@ -500,9 +743,7 @@
     "*****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -514,6 +755,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 18:**\n",
     "\n",
@@ -526,9 +769,7 @@
     " *****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -540,13 +781,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 19:**\n",
     "\n",
     "Ecrire un programme qui calcule, étant donné un entier *n* rentré par l'utilisateur, la plus grande puissance de *n* inférieure à un million."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -561,7 +802,7 @@
  "metadata": {
   "celltoolbar": "Diaporama",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -575,7 +816,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f8982e1f4ab427bb87d5be74831db1f094ba5a856f389ce2aee8b2f4fb023e4a"
+   }
   }
  },
  "nbformat": 4,
